--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "paths": {
-      "@/*": ["./src/*"],
-      "@public": ["../public"]
+      // "@/*": ["./src/*"],
+      // "@public": ["../public"]
     }
   }
 }
